update html and css files

--- a/index.html
+++ b/index.html
@@ -1,155 +1,154 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/style.css">
-  <title>Sudoku</title>
-</head>
-<body>
-  <main>
-    <table>
-      <tbody>
-       <tr>
-         <tr>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-         </tr>
-       </tr>
-       <tr>
-         <tr>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-         </tr>
-       </tr>
-       <tr>
-         <tr>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-         </tr>
-       </tr>
-       <tr>
-         <tr>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-         </tr>
-       </tr>
-       <tr>
-         <tr>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-         </tr>
-       </tr>
-       <tr>
-         <tr>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-         </tr>
-       </tr>
-       <tr>
-         <tr>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-         </tr>
-       </tr>
-       <tr>
-         <tr>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-         </tr>
-       </tr>
-       <tr>
-         <tr>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-           <td>0</td>
-         </tr>
-       </tr>
-      </tbody>
-    </table>
-    <section>
-      <article class="help-btn">
-      <button>Random</button>
-      <button>Hint</button>
-      <button>Solve</button>
-    </article>
-    <article class="number-btn">
-      <button class="number">1</button>
-      <button class="number">2</button>
-      <button class="number">3</button>
-      <button class="number">4</button>
-      <button class="number">5</button>
-      <button class="number">6</button>
-      <button class="number">7</button>
-      <button class="number">8</button>
-      <button class="number">9</button>
-    </article>
-    </section>
-    
-  </main>
-  <script src="./index.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Hind:wght@600&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
+    <title>Sudoku</title>
+  </head>
+  <body>
+    <main>
+      <table>
+        <tbody>
+          <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+        </tbody>
+      </table>
+      <section class="side-tools">
+        <article class="help-btn">
+          <button>Random</button>
+          <button>Solve</button>
+        </article>
+        <article class="tools-btn">
+          <button>
+            <img src="./css/images/undo_icon.png" alt="undo button" />
+          </button>
+          <button>
+            <img src="./css/images/erase_icon.png" alt="erase button" />
+          </button>
+          <button>
+            <img src="./css/images/notes_off_icon.png" alt="notes button" />
+          </button>
+          <button>
+            <img src="./css/images/hint_icon.png" alt="hint button" />
+          </button>
+        </article>
+        <article class="number-btn">
+          <button class="number">1</button>
+          <button class="number">2</button>
+          <button class="number">3</button>
+          <button class="number">4</button>
+          <button class="number">5</button>
+          <button class="number">6</button>
+          <button class="number">7</button>
+          <button class="number">8</button>
+          <button class="number">9</button>
+        </article>
+      </section>
+    </main>
+    <script src="./index.js"></script>
+  </body>
 </html>
