--- a/index.html
+++ b/index.html
@@ -118,24 +118,27 @@
         </tbody>
       </table>
       <section class="side-tools">
-        <article class="help-btn">
-          <button>Random</button>
-          <button>Solve</button>
-        </article>
-        <article class="tools-btn">
-          <button>
-            <img src="./css/images/undo_icon.png" alt="undo button" />
-          </button>
-          <button>
-            <img src="./css/images/erase_icon.png" alt="erase button" />
-          </button>
-          <button>
-            <img src="./css/images/notes_off_icon.png" alt="notes button" />
-          </button>
-          <button>
-            <img src="./css/images/hint_icon.png" alt="hint button" />
-          </button>
-        </article>
+        <div>
+          <article class="help-btn">
+            <button>Random</button>
+            <button>Solve</button>
+          </article>
+          <article class="tools-btn">
+            <button>
+              <img src="./css/images/undo_icon.png" alt="undo button" />
+            </button>
+            <button>
+              <img src="./css/images/erase_icon.png" alt="erase button" />
+            </button>
+            <button>
+              <img src="./css/images/notes_off_icon.png" alt="notes button" />
+            </button>
+            <button>
+              <img src="./css/images/hint_icon.png" alt="hint button" />
+            </button>
+          </article>
+        </div>
+
         <article class="number-btn">
           <button class="number">1</button>
           <button class="number">2</button>
