--- a/index.html
+++ b/index.html
@@ -126,15 +126,19 @@
         <article class="tools-btn">
           <button>
             <img src="./css/images/undo_icon.png" alt="undo button" />
+            <p>Undo</p>
           </button>
           <button>
             <img src="./css/images/erase_icon.png" alt="erase button" />
+            <p>Erase</p>
           </button>
           <button>
             <img src="./css/images/notes_off_icon.png" alt="notes button" />
+            <p>Notes</p>
           </button>
           <button>
             <img src="./css/images/hint_icon.png" alt="hint button" />
+            <p>Hint</p>
           </button>
         </article>
 
