--- a/index.html
+++ b/index.html
@@ -145,15 +145,15 @@
         <!-- </div>-->
 
         <article class="number-btn">
-          <button class="number" id="1">1</button>
-          <button class="number" id="2">2</button>
-          <button class="number" id="3">3</button>
-          <button class="number" id="4">4</button>
-          <button class="number" id="5">5</button>
-          <button class="number" id="6">6</button>
-          <button class="number" id="7">7</button>
-          <button class="number" id="8">8</button>
-          <button class="number" id="9">9</button>
+          <button class="number">1</button>
+          <button class="number">2</button>
+          <button class="number">3</button>
+          <button class="number">4</button>
+          <button class="number">5</button>
+          <button class="number">6</button>
+          <button class="number">7</button>
+          <button class="number">8</button>
+          <button class="number">9</button>
         </article>
       </section>
     </main>
