--- a/index.html
+++ b/index.html
@@ -123,6 +123,10 @@
           <button>Random</button>
           <button>Solve</button>
         </article>
+
+        <article class="check-btn">
+          <button>Check</button>
+        </article>
         <article class="tools-btn">
           <button>
             <img src="./css/images/undo_icon.png" alt="undo button" />
