--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         </article>
 
         <article class="check-btn">
-          <button id="check-btn">Check</button>
+          <button id="check-btn" disabled>Check</button>
         </article>
         <article class="tools-btn">
           <button>
