--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
           <button id="check-btn" disabled>Check</button>
         </article>
         <article class="tools-btn">
-          <button>
+          <button id="undo-btn">
             <img src="./css/images/undo_icon.png" alt="undo button" />
             <p>Undo</p>
           </button>
