--- a/index.html
+++ b/index.html
@@ -132,15 +132,15 @@
             <img src="./css/images/undo_icon.png" alt="undo button" />
             <p>Undo</p>
           </button>
-          <button>
+          <button id="erase-btn">
             <img src="./css/images/erase_icon.png" alt="erase button" />
             <p>Erase</p>
           </button>
-          <button>
+          <button id="notes.btn">
             <img src="./css/images/notes_off_icon.png" alt="notes button" />
             <p>Notes</p>
           </button>
-          <button>
+          <button id="hint-btn">
             <img src="./css/images/hint_icon.png" alt="hint button" />
             <p>Hint</p>
           </button>
