--- a/index.html
+++ b/index.html
@@ -136,8 +136,12 @@
             <img src="./css/images/erase_icon.png" alt="erase button" />
             <p>Erase</p>
           </button>
-          <button id="notes.btn">
-            <img src="./css/images/notes_off_icon.png" alt="notes button" />
+          <button>
+            <img
+              src="./css/images/notes_off_icon.png"
+              alt="notes button"
+              id="notes-btn"
+            />
             <p>Notes</p>
           </button>
           <button id="hint-btn">
