--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <!-- <div>-->
         <article class="help-btn">
           <button>Random</button>
-          <button>Solve</button>
+          <button id="solveBtn">Solve</button>
         </article>
 
         <article class="check-btn">
