create genartor sudoku

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       <section class="side-tools">
         <!-- <div>-->
         <article class="help-btn">
-          <button>Random</button>
+          <button id="randomBtn">Random</button>
           <button id="solveBtn">Solve</button>
         </article>
 
