--- a/index.html
+++ b/index.html
@@ -153,15 +153,15 @@
         <!-- </div>-->
 
         <article class="number-btn">
-          <button class="number">1</button>
-          <button class="number">2</button>
-          <button class="number">3</button>
-          <button class="number">4</button>
-          <button class="number">5</button>
-          <button class="number">6</button>
-          <button class="number">7</button>
-          <button class="number">8</button>
-          <button class="number">9</button>
+          <button class="number" id="btn-1">1</button>
+          <button class="number" id="btn-2">2</button>
+          <button class="number" id="btn-3">3</button>
+          <button class="number" id="btn-4">4</button>
+          <button class="number" id="btn-5">5</button>
+          <button class="number" id="btn-6">6</button>
+          <button class="number" id="btn-7">7</button>
+          <button class="number" id="btn-8">8</button>
+          <button class="number" id="btn-9">9</button>
         </article>
       </section>
     </main>
